# trinity_net_tests

./: LICENSE  Makefile.am  autogen.sh  configure.ac
src/: Makefile  Makefile.am  aft_init.c  aft_internal.h  aft_put.c  ce_pmi_example.c  cq_write_pmi_example.c  datagram_post_pmi_example.c  fma_amo_fp_pmi_example.c  fma_amo_g2_b32_fp_pmi_example.c  fma_amo_g2_b32_pmi_example.c  fma_amo_g2_b64_pmi_example.c  fma_amo_pmi_example.c  fma_get_pmi_example.c  fma_put_pmi_example.c  memory_registration_pmi_example.c  msgq_send_pmi_example.c  rdma_get_pmi_example.c  rdma_put_a2a.c  rdma_put_pmi_example.c  rdma_put_simple.c  smsg_send_pmi_example.c  utility_functions.h
